--- a/source/02_HTML_CSS/ch06/css/shoppingmall.css
+++ b/source/02_HTML_CSS/ch06/css/shoppingmall.css
@@ -8,6 +8,11 @@
     font-family: 'Merriweather-Light';
     src: url(../font/Merriweather-Light.ttf);
 }
+.lobster-regular {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 * {
     margin: 0; padding: 0;
     font-family: 'Merriweather-Regular';
@@ -17,4 +22,146 @@ a {
     color: black;
     display: block;
 }
+a:hover {
+    font-weight: bold;
+}
 li {list-style: none;}
+/***** header *****/
+/*** header - gnb ***/
+header .gnb {
+    background-color: black;
+}
+header .gnb ul {
+    width: 1000px;
+    height: 30px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+header .gnb ul li {
+    width: 90px;
+    margin: 0 5px;
+    text-align: center;
+    line-height: 30px;
+    float: left;
+}
+header .gnb a {
+    color: white;
+}
+/*** header - logo ***/
+header .logo {
+    height: 100px;
+    width: 200px;
+    margin: 50px auto 25px;
+    padding: 0;
+    border: 1px solid black;
+    background-color: lightyellow;
+    font-family: "Lobster", sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    line-height: 100px;
+}
+/*** header - hitmenu ***/
+header .hitmenu {;
+}
+header .hitmenu ul {
+    width: 1000px;
+    margin: 0 auto 5px;
+    overflow: hidden;
+}
+header .hitmenu ul li {
+    width: 70px; height: 25px;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 25px;
+    float: right;
+}
+header .hitmenu ul li:first-child {
+    border-radius: 0 8px 8px 0;
+}
+header .hitmenu ul li:last-child {
+    border-radius: 8px 0 0 8px;
+}
+/*** header - lnb ***/
+header .lnb {
+    border-top: 1px dashed black;
+    border-bottom: 1px dashed black;
+}
+header .lnb ul {
+    width: 1000px;
+    height: 30px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+header .lnb ul li {
+    width: 105px;
+    margin: 0 10px;
+    text-align: center;
+    line-height: 30px;
+    float: left;
+}
+/***** content *****/
+#content {
+    width: 1000px;
+    margin: 5px auto;
+}
+/*** content - section 1 ***/
+#content .section1 {
+    overflow: hidden;
+    text-align: center;
+    line-height: 400px;
+}
+#content .section1 > div {
+    height: 400px;
+    float:left;
+    border: 1px solid gray;
+    box-sizing: border-box;
+}
+#content .slide_banner {
+    width: 700px;
+}
+#content .side_banner {
+    width: 300px;
+}
+/*** content - section 2 ***/
+#content .hit_product, .md_product {
+    border: 1px solid gray;
+    background-color: lightyellow;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+#content ul li {
+    width: 24%;
+    margin: 5px 0 5px 0.8%;
+    height: 400px;
+    background-color: white;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    line-height: 400px;
+    text-align: center;
+    float: left;
+}
+/***** footer *****/
+footer {
+    margin: 0 auto;
+    width: 1000px;
+    overflow: hidden;
+}
+footer div:nth-child(-n+3) { /*위에서부터 3개*/
+    width: 33.3%;
+    height: 90px;
+    text-align: center;
+    line-height: 90px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    float: left;
+}
+footer .copyright{
+    width: 1000px;
+    height: 30px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    clear: both;
+}
