--- a/source/11_flask/ch3_methods_error/templates/2_crud/join.html
+++ b/source/11_flask/ch3_methods_error/templates/2_crud/join.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="{{url_for('static', filename='flask.png')}}" rel="icon">
   <link href="{{url_for('static', filename='file.css')}}" rel="stylesheet" type="text/css">
+  {% if msg %} <!-- msg가 true니? -->
+    <script>
+      alert("{{msg}}");
+    </script>
+  {% endif %}
 </head>
 <body>
   <h2>JOIN INFO(GET)</h2>
   <form action="/join" method="post">
-    <p>이 름 <input type="text" name="name"></p>
-    <p>아 뒤 <input type="number" name="id"></p>
-    <p>비 번 <input type="password" name="pw"></p>
-    <p>주 소 <input type="text" name="addr"></p>
+    <p>이 름 <input type="text" name="name" value="{{form_data.name if form_data else ''}}"></p>
+    <p>아 뒤 <input type="text" name="id" value="{{form_data.id if form_data else ''}}"></p>
+    <p>비 번 <input type="password" name="pw" value="{{form_data.pw if form_data else ''}}"></p>
+    <p>주 소 <input type="text" name="addr" value="{{form_data.addr if form_data else ''}}"></p>
     <p><input type="submit" value="가입"></p>
   </form>
 </body>
