--- a/source/12_django/ch02_wordcnt/home/templates/home/index.html
+++ b/source/12_django/ch02_wordcnt/home/templates/home/index.html
@@ -7,10 +7,15 @@
     {% load static %}
     <img src="{% static 'img/django.png' %}" alt="그림">
     <a href="/test">TEST</a>
+    <a href="{% url 'test' %}">TEST</a>
     <hr>
-    <a href="/showIi/123">showId/123</a>
+    <a href="/showId/123">showId/123</a>
     <button onclick="location.href='/showId/123'" class="btn btn-outline-primary">showId/123</button>
+    <a href="{% url 'showIntId' 123 %}">showId/123</a>
+    <button onclick="location.href='{% url 'showIntId' 123 %}'" class="btn btn-outline-primary">showId/123</button>
     <br>
-    <a href="/showIi/123">showId/hong</a>
+    <a href="/showId/123">showId/hong</a>
     <button onclick="location.href='/showId/abc'" class="btn btn-outline-warning">showId/abc</button>
+    <a href="{% url 'showStrId' 'hong' %}">showId/hong</a>
+    <button onclick="location.href='{% url 'showStrId' 'abc' %}'" class="btn btn-outline-warning">showId/abc</button>
 {% endblock %}
